--- a/css/style.css
+++ b/css/style.css
@@ -25,8 +25,7 @@ nav {
   border-radius: 20px;
 }
 
-.settingsButton:hover,
-.settingsButton:focus {
+.settingsButton:hover {
   background: #28ffac;
   cursor: pointer;
   border: 1px solid #5f5f5f;
@@ -40,11 +39,12 @@ nav {
   padding: 10px;
   top: 50%;
   left: 50%;
-  transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%) scale(1);
   background: #c7c7c7;
   box-shadow: 0 3px 3px rgba(0, 0, 0, 0.5);
   border-radius: 20px;
   z-index: 9999;
+  transition: 150ms ease-in-out;
 }
 
 .topTitle {
@@ -65,7 +65,8 @@ nav {
   margin-bottom: 5px;
 }
 
-.settingsForm :is(h3, label) {
+.settingsForm :is(h3, label),
+.addwallpaper label {
   color: #303030;
 }
 
@@ -116,35 +117,71 @@ nav {
 /*addwallpaper*/
 .localApps {
   position: absolute;
-  top: 50%;
+  top: 80%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 80%;
   z-index: 1;
-  background: #d8d8d8;
+  background: rgba(0, 0, 0, 0.2);
   border-radius: 20px;
-  box-shadow: 0 3px 3px rgba(0, 0, 0, 0.5);
-  padding: 10px;
+  box-shadow: 0 5px 5px rgba(0, 0, 0, 0.25);
+  padding: 10px 0;
 }
 
 .localApps ul {
   list-style: none;
-  padding: 10px;
   width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+  justify-content: center;
 }
 
 .localApps ul li {
-  margin: 3px;
+  position: relative;
+  margin: 5px;
+  padding: 10px;
 }
 
 .localApps ul li a {
+  padding: 10px 20px;
+  background: #f3ececdc;
   text-decoration: none;
-  color: #353535;
+  color: #474747;
   border-radius: 20px;
   text-align: center;
   transition: 150ms ease-in-out;
-  transition-property: color;
+  transition-property: background, color;
+}
+
+.localApps ul li span {
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 10px;
+  width: 10px;
+  display: none;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  background: #f61515;
+  color: #fff;
+  padding: 2px 3px 5px 3px;
+  border-radius: 5px;
+  font-size: 14px;
+}
+
+.localApps ul li:hover span {
+  display: flex;
+  cursor: pointer;
+}
+
+.localApps ul li span:hover + a {
+  background: #f61515;
+  color: #b3b3b3;
 }
 
 .localApps ul li a:hover {
-  color: #d1002d;
+  background: #f7f7f7;
+  color: #373737;
 }
